#19219 : EAE : mauvais calcul parcours pro